# CalcGTest

./: CMakeLists.txt  program.cpp
tests/: calculator_tests.cpp  history_tests.cpp  mock.h  test_init.cpp
